--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     />
     <meta content="/logo.png" property="og:image" />
     <meta content="#191724" data-react-helmet="true" name="theme-color" />
-    <script src="/uv/uv.bundle.js"></script>
-    <script src="/uv/uv.config.js"></script>
-    <script src="/dynamic/dynamic.config.js"></script>
-    <script src="/localforage/localforage.min.js" defer></script>
+    <script src="/uv/uv.bundle.js" defer></script>
+    <script src="/uv/uv.config.js" defer></script>
+    <script src="/dynamic/dynamic.config.js" defer></script>
+    <script src="/localforage/localforage.min.js"></script>
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
